Updated Config Files...

--- a/.config/qt6ct/qt6ct.conf
+++ b/.config/qt6ct/qt6ct.conf
@@ -5,8 +5,8 @@ standard_dialogs=gtk3
 style=Fusion
 
 [Fonts]
-fixed="Iosevka,9,-1,5,400,0,0,0,0,0,0,0,0,0,0,1"
-general="Sans,9,-1,5,400,0,0,0,0,0,0,0,0,0,0,1"
+fixed="Terminess Nerd Font,9,-1,5,500,0,0,0,0,0,0,0,0,0,0,1"
+general="Terminess Nerd Font Mono,10,-1,5,500,0,0,0,0,0,0,0,0,0,0,1"
 
 [Interface]
 activate_item_on_single_click=1
@@ -24,7 +24,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2@\0\0\0\0\0\0\x4\x7f\0\0\x3_\0\0\x2\x42\0\0\0\x14\0\0\x4}\0\0\x3]\0\0\0\0\0\0\0\0\x4\x80\0\0\x2\x42\0\0\0\x14\0\0\x4}\0\0\x3])
+geometry="@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\x44\0\0\0(\0\0\x4w\0\0\x3W\0\0\x2H\0\0\0,\0\0\x4s\0\0\x3S\0\0\0\0\0\0\0\0\x4\x80\0\0\x2H\0\0\0,\0\0\x4s\0\0\x3S)"
 
 [Troubleshooting]
 force_raster_widgets=1
