--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -74,7 +74,7 @@ label-empty = %name%
 label-urgent-background = ${colors.alert}
 label-empty-foreground = ${colors.disabled}
 label-active-foreground = ${colors.background}
-label-active-background = ${colors.background-alt}
+label-active-background = ${colors.primary}
 
 label-occupied-padding = 1
 label-urgent-padding = 1
