--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -50,19 +50,13 @@ module-margin = 1
 font-0 = Terminess Nerd Font:size=14;3
 modules-left = powermenu cpu memory xwindow
 modules-center = xworkspaces
-modules-right = systray pulseaudio date
+modules-right = bluetooth wlan pulseaudio date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
 wm-restack = i3
-
-[module/systray]
-type = internal/tray
-format-margin = 1pt
-tray-spacing = 12pt
-#tray-background = #000000
 
 [module/xworkspaces]
 type = internal/xworkspaces
@@ -86,6 +80,15 @@ type = internal/xwindow
 label =   %class%
 label-empty =   Desktop
  
+[module/bluetooth]
+type = custom/script
+exec = sh ~/.config/polybar/bluetooth/bluetooth.sh
+interval = 1
+click-right = sh ~/.config/rofi/bluetooth/bluetooth.sh
+click-left = sh ~/.config/polybar/bluetooth/toggle-bluetooth.sh
+format-background = ${colors.background}
+format-foreground = ${colors.foreground}
+
 [module/pulseaudio]
 type = internal/pulseaudio
 label-volume = %percentage%%
@@ -98,13 +101,14 @@ ramp-volume-1 = 󰖀
 ramp-volume-2 = 󰕾
 ramp-volume-foreground = ${colors.primary}
 
-label-muted = 󰸈 Muted
+label-muted = 󰸈 
 label-muted-foreground = ${colors.disabled}
 click-right = kitty -e pulsemixer
 
 [module/memory]
 type = internal/memory
 interval = 2
+seperator = |
 format-prefix = "  "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
@@ -121,13 +125,34 @@ type = internal/date
 interval = 10
 date = %I:%M %p
 date-alt = %m-%d-%Y 
+
+format = 󱦟 <label>
+format-foreground = ${colors.primary}
+
 label = %date%
-label-foreground = ${colors.primary}
+label-foreground = ${colors.foreground}
+
+[module/wlan]
+type = internal/network
+interface-type = wireless
+interval = 1
+
+ramp-signal-0 = 󰤯
+ramp-signal-1 = 󰤟
+ramp-signal-2 = 󰤥
+ramp-signal-3 = 󰤨
+ramp-signal-4 = 󰤨
+ramp-signal-foreground = ${colors.primary}
+
+format-connected = <ramp-signal>  <label-connected>
+label-connected = %{A1:~/.config/rofi/wifi/wifi.sh:}%essid%%{A}
+label-disconnected = "%{A1:~/.config/rofi/wifi/wifi.sh:}󰤭 %{A}"
 
 [module/powermenu]
 type = custom/text
 label = "⏻ "
 click-left = sh ~/.config/rofi/powermenu/powermenu.sh
+click-right = kitty -e btop
 
 [settings]
 screenchange-reload = false
