--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -47,7 +47,8 @@ border-color = ${colors.primary}
 
 padding = 1
 module-margin = 1
-font-0 = Terminess Nerd Font:size=14;3
+font-0 = "ProggyClean Nerd Font:antialias:false:size=16;3"
+font-1 = "Siji:antialias:false:pixelsize=16;2"
 modules-left = powermenu cpu memory xwindow
 modules-center = xworkspaces
 modules-right = bluetooth wlan pulseaudio date
@@ -56,7 +57,6 @@ cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
-wm-restack = i3
 
 [module/xworkspaces]
 type = internal/xworkspaces
@@ -77,8 +77,8 @@ label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
-label =   %class%
-label-empty =   Desktop
+label = %{T2}%{T-} %class%
+label-empty = %{T2}%{T-} Desktop
  
 [module/bluetooth]
 type = custom/script
@@ -96,37 +96,36 @@ format-volume = <ramp-volume> <label-volume>
 label-volume-foreground = ${colors.foreground}
 interval = 1
 
-ramp-volume-0 = 󰕿
-ramp-volume-1 = 󰖀
-ramp-volume-2 = 󰕾
+ramp-volume-0 = %{T2}%{T-}
+ramp-volume-1 = %{T2}%{T-}
+ramp-volume-2 = %{T2}%{T-}
 ramp-volume-foreground = ${colors.primary}
 
-label-muted = 󰸈 
+label-muted = %{T2}%{T-}
 label-muted-foreground = ${colors.disabled}
 click-right = kitty -e pulsemixer
 
 [module/memory]
 type = internal/memory
 interval = 2
-seperator = |
-format-prefix = "  "
+format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "  "
+format-prefix = "%{T2} %{T-}"
 format-prefix-foreground = ${colors.primary}
 label = %percentage%%
 
 [module/date]
 type = internal/date
 interval = 10
-date = %I:%M %p
-date-alt = %m-%d-%Y 
+date = %{T2} %{T-}%I:%M %p
+date-alt = %{T2} %{T-}%m-%d-%Y 
 
-format = 󱦟 <label>
+format = <label>
 format-foreground = ${colors.primary}
 
 label = %date%
@@ -137,20 +136,19 @@ type = internal/network
 interface-type = wireless
 interval = 1
 
-ramp-signal-0 = 󰤯
-ramp-signal-1 = 󰤟
-ramp-signal-2 = 󰤥
-ramp-signal-3 = 󰤨
-ramp-signal-4 = 󰤨
+ramp-signal-0 = %{T2}%{T-}
+ramp-signal-1 = %{T2}%{T-}
+ramp-signal-2 = %{T2}%{T-} 
 ramp-signal-foreground = ${colors.primary}
 
-format-connected = <ramp-signal>  <label-connected>
-label-connected = %{A1:~/.config/rofi/wifi/wifi.sh:}%essid%%{A}
-label-disconnected = "%{A1:~/.config/rofi/wifi/wifi.sh:}󰤭 %{A}"
+format-connected = %{A1:~/.config/rofi/wifi/wifi.sh:}<ramp-signal> <label-connected>%{A}
+label-connected = %essid%
+label-disconnected = %{A1:~/.config/rofi/wifi/wifi.sh:}%{T2}%{T-}%{A}
+label-disconnected-foreground = ${colors.background-alt}
 
 [module/powermenu]
 type = custom/text
-label = "⏻ "
+label = ""
 click-left = sh ~/.config/rofi/powermenu/powermenu.sh
 click-right = kitty -e btop
 
