--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -21,7 +21,7 @@ background		#393D44
 foreground		#E3ECEA
 
 # font
-font_family		DepartureMono Nerd Font
+font_family		DepartureMono
 font_size		12.0
 
 # cursor
