--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Marwaita-X-dark-Lime
 gtk-icon-theme-name=pixelitos-icon
-gtk-font-name=DepartureMono Nerd Font 10
+gtk-font-name=undefined Medium 8
 gtk-cursor-theme-name=pixelfun2
 gtk-cursor-theme-size=18
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
@@ -12,6 +12,6 @@ gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=0
 gtk-xft-antialias=1
 gtk-xft-hinting=1
-gtk-xft-hintstyle=hintslight
+gtk-xft-hintstyle=hintfull
 gtk-xft-rgba=rgb
 gtk-application-prefer-dark-theme=1
