--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -47,10 +47,10 @@ border-color = ${colors.primary}
 
 padding = 1
 module-margin = 1
-font-0 = "ProggyClean Nerd Font:antialias:false:size=16;3"
-font-1 = "Siji:antialias:false:pixelsize=16;2"
+font-0 = "ProggyCleanTTSZ:size=16;3"
+font-1 = "Siji:pixelsize=16;2"
 modules-left = powermenu cpu memory xwindow
-modules-center = xworkspaces
+modules-center = i3
 modules-right = bluetooth wlan pulseaudio date
 
 cursor-click = pointer
@@ -58,22 +58,26 @@ cursor-scroll = ns-resize
 
 enable-ipc = true
 
-[module/xworkspaces]
-type = internal/xworkspaces
-label-occupied = %name%
-label-active = %name%
+[module/i3]
+type = internal/i3
+format = <label-state> <label-mode>
+
 label-urgent = %name%
-label-empty = %name%
+label-visible = %name%
+label-focused = %name%
+label-unfocused = %name%
 
+label-mode-background =
 label-urgent-background = ${colors.alert}
-label-empty-foreground = ${colors.disabled}
-label-active-foreground = ${colors.background}
-label-active-background = ${colors.primary}
+label-visible-foreground = ${colors.disabled}
+label-focused-foreground = ${colors.background}
+label-focused-background = ${colors.primary}
+label-unfocused-foreground = ${colors.foreground}
 
-label-occupied-padding = 1
 label-urgent-padding = 1
-label-active-padding = 12pt
-label-empty-padding = 1
+label-visible-padding = 1
+label-focused-padding = 12pt
+label-unfocused-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
@@ -138,10 +142,10 @@ interval = 1
 
 ramp-signal-0 = %{T2}%{T-}
 ramp-signal-1 = %{T2}%{T-}
-ramp-signal-2 = %{T2}%{T-} 
+ramp-signal-2 = %{T2}%{T-} 
 ramp-signal-foreground = ${colors.primary}
 
-format-connected = %{A1:~/.config/rofi/wifi/wifi.sh:}<ramp-signal> <label-connected>%{A}
+format-connected = %{A:~/.config/rofi/wifi/wifi.sh:}<ramp-signal> <label-connected>%{A}
 label-connected = %essid%
 label-disconnected = %{A1:~/.config/rofi/wifi/wifi.sh:}%{T2}%{T-}%{A}
 label-disconnected-foreground = ${colors.background-alt}
