--- a/.config/qt6ct/qt6ct.conf
+++ b/.config/qt6ct/qt6ct.conf
@@ -1,12 +1,13 @@
 [Appearance]
 color_scheme_path=/usr/share/qt6ct/colors/darker.conf
 custom_palette=true
+icon_theme=pixelitos-icon
 standard_dialogs=gtk3
 style=Fusion
 
 [Fonts]
-fixed="Terminess Nerd Font,9,-1,5,500,0,0,0,0,0,0,0,0,0,0,1"
-general="Terminess Nerd Font Mono,10,-1,5,500,0,0,0,0,0,0,0,0,0,0,1"
+fixed="Departure Mono,8,-1,5,400,0,0,0,0,0,0,0,0,0,0,1"
+general="Departure Mono,8,-1,5,400,0,0,0,0,0,0,0,0,0,0,1"
 
 [Interface]
 activate_item_on_single_click=1
@@ -24,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry="@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\x44\0\0\0(\0\0\x4w\0\0\x3W\0\0\x2H\0\0\0,\0\0\x4s\0\0\x3S\0\0\0\0\0\0\0\0\x4\x80\0\0\x2H\0\0\0,\0\0\x4s\0\0\x3S)"
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\x43\0\0\0&\0\0\x4y\0\0\x3Y\0\0\x2\x46\0\0\0)\0\0\x4v\0\0\x3V\0\0\0\0\0\0\0\0\x4\x80\0\0\x2\x46\0\0\0)\0\0\x4v\0\0\x3V)
 
 [Troubleshooting]
 force_raster_widgets=1
