--- a/.config/rofi/iwdrofimenu.conf
+++ b/.config/rofi/iwdrofimenu.conf
@@ -3,15 +3,15 @@ device = wlan0
 img_dir = /usr/share/iwdrofimenu/res/icons
 img_subdir = dark
 rofi_theme_file = ~/.config/rofi/wifi/style.rasi
-show_separator = True
+show_separator = False
 rfkill_cmd = rfkill
 
 [templates]
-signal_quality_str_1 = 
-signal_quality_str_2 = 󰣴
-signal_quality_str_3 = 󰣶
-signal_quality_str_4 = 󰣸
-signal_quality_str_5 = 󰣺
+signal_quality_str_1 =  
+signal_quality_str_2 =   
+signal_quality_str_3 =  
+signal_quality_str_4 =   
+signal_quality_str_5 =   
 network_list_entry = $quality_str <b>$ssid</b> $quality ($security)
 network_list_entry_active = 
 network_list_entry_known = 
@@ -49,18 +49,18 @@ back = arrow-left.png
 confirm = confirm.png
 disconnect = network-wireless-disabled.png
 trash = trash.png
-scan = search.png
+scan = search.png`
 refresh = refresh.png
 enable = network-wireless-signal-excellent.png
 disable = network-wireless-disabled.png
-wifi-signal-1 = network-wireless-signal-weak.png
-wifi-signal-2 = network-wireless-signal-weak.png
-wifi-signal-3 = network-wireless-signal-ok.png
-wifi-signal-4 = network-wireless-signal-good.png
-wifi-signal-5 = network-wireless-signal-excellent.png
-wifi-encrypted-signal-1 = network-wireless-signal-weak.png
-wifi-encrypted-signal-2 = network-wireless-signal-weak.png
-wifi-encrypted-signal-3 = network-wireless-signal-ok.png
-wifi-encrypted-signal-4 = network-wireless-signal-good.png
-wifi-encrypted-signal-5 = network-wireless-signal-excellent.png
+wifi-signal-1 =  
+wifi-signal-2 =  
+wifi-signal-3 =  
+wifi-signal-4 =   
+wifi-signal-5 =  
+wifi-encrypted-signal-1 = 
+wifi-encrypted-signal-2 = 
+wifi-encrypted-signal-3 = 
+wifi-encrypted-signal-4 = 
+wifi-encrypted-signal-5 = 
 
