--- a/.config/viewnior/viewnior.conf
+++ b/.config/viewnior/viewnior.conf
@@ -10,7 +10,7 @@ show-menu-bar=true
 show-toolbar=true
 show-scrollbar=true
 show-statusbar=true
-start-maximized=false
+start-maximized=true
 slideshow-timeout=5
 auto-resize=false
 behavior-wheel=1
