--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -3,7 +3,7 @@ color_scheme_path=/usr/share/qt5ct/colors/darker.conf
 custom_palette=true
 icon_theme=Tela-red
 standard_dialogs=gtk3
-style=Fusion
+style=gtk
 
 [Fonts]
 fixed="Sans Serif,9,-1,5,50,0,0,0,0,0"
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2Y\0\0\0\x1e\0\0\x4y\0\0\x1\xc8\0\0\x2]\0\0\0\"\0\0\x4u\0\0\x1\xc4\0\0\0\0\0\0\0\0\x4\x80\0\0\x2]\0\0\0\"\0\0\x4u\0\0\x1\xc4)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\x43\0\0\x1\xc3\0\0\x4y\0\0\x3Y\0\0\x2\x46\0\0\x1\xc6\0\0\x4v\0\0\x3V\0\0\0\0\0\0\0\0\x4\x80\0\0\x2\x46\0\0\x1\xc6\0\0\x4v\0\0\x3V)
 
 [Troubleshooting]
 force_raster_widgets=1
