--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -54,25 +54,37 @@ cursor-scroll = ns-resize
 
 enable-ipc = true
 
+override-redirect = false
+wm-restack = i3
+
 [module/i3]
 type = internal/i3
-format = <label-state> <label-mode>
+format = <label-mode> <label-state> <label-mode>
+pin-workspaces = false
+index-sort = true
+fuzzy-match = true
+strip-wsnumbers = true
 
-label-urgent = %name%
-label-visible = %name%
-label-focused = %name%
-label-unfocused = %name%
+label-mode = %mode%
+label-urgent = %{T2}%{T-}
+label-visible = %icon%
+label-focused = %{T2}%{T-}
+label-unfocused = %icon%
 
-label-mode-background =
+label-mode-background = ${colors.primary}
+label-mode-foreground = ${colors.background}
 label-urgent-background = ${colors.alert}
 label-visible-foreground = ${colors.disabled}
-label-focused-foreground = ${colors.background}
-label-focused-background = ${colors.primary}
+label-focused-foreground = ${colors.primary}
+label-focused-background = ${colors.background}
 label-unfocused-foreground = ${colors.foreground}
 
+ws-icon-default = %{T2}%{T-}
+
+label-mode-padding = 1
 label-urgent-padding = 1
 label-visible-padding = 1
-label-focused-padding = 12pt
+label-focused-padding = 1
 label-unfocused-padding = 1
 
 [module/xwindow]
@@ -141,9 +153,9 @@ ramp-signal-1 = %{T2}%{T-}
 ramp-signal-2 = %{T2}%{T-} 
 ramp-signal-foreground = ${colors.primary}
 
-format-connected = %{A:~/.config/rofi/wifi/wifi.sh:}<ramp-signal> <label-connected>%{A}
+format-connected = %{A:sh ~/.config/rofi/wifi/wifi.sh:}<ramp-signal> <label-connected>%{A}
 label-connected = %essid%
-label-disconnected = %{A1:~/.config/rofi/wifi/wifi.sh:}%{T2}%{T-}%{A}
+label-disconnected = %{A1:sh ~/.config/rofi/wifi/wifi.sh:}%{T2}%{T-}%{A}
 label-disconnected-foreground = ${colors.background-alt}
 
 [module/powermenu]
