--- a/.config/i3/config
+++ b/.config/i3/config
@@ -4,7 +4,7 @@
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
-font pango:DepartureMono Nerd Font 9
+font pango:DepartureMono 8
 
 # Start XDG autostart .desktop files using dex. See also
 exec --no-startup-id dex --autostart --environment i3
@@ -142,7 +142,7 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 
 # exit i3
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Logout in i3?.' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec sh ~/.config/rofi/powermenu/powermenu.sh
 
 # Resize Window 
 mode "resize" {
@@ -167,19 +167,19 @@ mode "resize" {
 bindsym $mod+z mode "resize"
 
 # window gaps
-gaps inner 0
 gaps inner 6
+gaps outer 0
 smart_gaps on
 
 # title bars
 smart_borders no_gaps
 default_border pixel 2
-for_window [class="^.*"] border pixel 2
-for_window [class="Polybar"] floating enable
+for_window [class=".*"] border pixel 2
+for_window [floating] move position center
 
 # class                 border  backgr. text    indicator child_border
-client.focused          #9FD8A6 #9FD8A6 #E3ECEA #9FD8A6   #9FD8A6
-client.focused_inactive #D0E1A9 #D0E1A9 #393D44 #D0E1A9   #D0E1A9
+client.focused          #D0E1A9 #D0E1A9 #E3ECEA #9FD8A6   #9FD8A6
+client.focused_inactive #9FD8A6 #9FD8A6 #393D44 #D0E1A9   #D0E1A9
 client.unfocused        #9EA5A3 #9EA5A3 #E3ECEA #393D44   #9EA5A3
 client.urgent           #D6AA96 #D6AA96 #E3ECEA #D6AA96   #D6AA96
 client.placeholder      #A3E5FE #A3E5FE #A3E5FE #A3E5FE   #A3E5FE
