--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,4 +1,3 @@
-
 ##################################
 #         Picom Config           #
 #     Crisp Outline for i3       #
@@ -16,22 +15,31 @@ opacity-rule = [
   "100:class_g = 'Rofi'"
 ];
 
-#Shadows
+# Shadows
 shadow = true;
-shadow-radius = 0;              
-shadow-offset-x = 0;
-shadow-offset-y = 0;
+shadow-radius = 1;              
+shadow-offset-x = -4;
+shadow-offset-y = 2;
 shadow-opacity = 1.0;
 
 # Outline color (change to any hex)
-#shadow-color = #000000
+shadow-color = "#393D44"
 
 # Exclude fake borders on overlays
 shadow-exclude = [
   "name = 'Notification'",
   "class_g = 'Conky'",
-  "class_g = 'i3-frame'",
-  "class_g = 'Rofi'"
+  "class_g = 'Polybar'",
+  "class_g = 'Rofi'",
+  "window_type = 'menu'",
+  "window_type = 'dropdown_menu'",
+  "window_type = 'popup_menu'",
+  "window_type = 'tooltip'",
+  "window_type = 'combo'",
+  "window_type = 'dialog'",
+  "window_type = 'toolbar'",
+  "window_type = 'utility'",
+  "window_type = 'notification'"
 ];
 
 # Animations
@@ -71,7 +79,6 @@ rounded-corners-exclude = [
   "window_type = 'menu'",
   "class_g = 'Zen'"
 ];
-
 
 # Misc
 mark-wmwin-focused = true;
