--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -10,6 +10,7 @@ vsync = true;
 inactive-opacity = 0.90;
 active-opacity = 1.00;
 opacity-rule = [
+  "100:window_type = 'utility'",
   "100:class_g = 'i3-frame'",     # Keep i3 gaps/borders opaque
   "100:class_g = 'Polybar'",
   "100:class_g = 'Rofi'"
@@ -27,19 +28,19 @@ shadow-color = "#393D44"
 
 # Exclude fake borders on overlays
 shadow-exclude = [
-  "name = 'Notification'",
-  "class_g = 'Conky'",
-  "class_g = 'Polybar'",
   "class_g = 'Rofi'",
+  "class_g = 'Polybar'",  
   "window_type = 'menu'",
-  "window_type = 'dropdown_menu'",
-  "window_type = 'popup_menu'",
-  "window_type = 'tooltip'",
   "window_type = 'combo'",
+  "name = 'Notification'",
   "window_type = 'dialog'",
+  "window_type = 'splash'",
   "window_type = 'toolbar'",
   "window_type = 'utility'",
-  "window_type = 'notification'"
+  "window_type = 'tooltip'",
+  "window_type = 'popup_menu'",
+  "window_type = 'notification'",
+  "window_type = 'dropdown_menu'"
 ];
 
 # Animations
@@ -60,24 +61,27 @@ fade-out-step = 0.08;
 # Blur
 blur-method = "none";
 blur-background-exclude = [
-  "class_g = 'Zen'",
-  "class_g = 'firefox'",
-  "class_g = 'Chromium'",
+  "name = 'Zen'",
   "name = 'polybar'",
-  "class_g = 'slop'",
-  "class_g = 'Xfce4-notifyd'",
+  "class_g = 'Rofi'",
   "window_type = 'menu'",
-  "window_type = 'dropdown_menu'",
-  "window_type = 'popup_menu'"
+  "window_type = 'combo'",
+  "window_type = 'dialog'",
+  "window_type = 'splash'",
+  "window_type = 'toolbar'",
+  "window_type = 'utility'",
+  "window_type = 'tooltip'",
+  "window_type = 'popup_menu'",
+  "window_type = 'notification'",
+  "window_type = 'dropdown_menu'"
 ];
 
 # Corner Radius
 corner-radius = 0;
 rounded-corners-exclude = [
-  "window_type = 'popup_menu'",
-  "window_type = 'dropdown_menu'",
   "window_type = 'menu'",
-  "class_g = 'Zen'"
+  "window_type = 'popup_menu'",
+  "window_type = 'dropdown_menu'", 
 ];
 
 # Misc
