updated the style & scriptsgit add .

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -46,7 +46,7 @@ shadow-exclude = [
 # Animations
 animations = true;
 animation-stiffness = 200;
-animation-dampening = 20;
+animation-dampening = 120;
 animation-window-mass = 0.8;
 animation-for-open-window = "zoom";
 animation-for-close-window = "zoom";
@@ -90,3 +90,4 @@ mark-ovredir-focused = true;
 detect-rounded-corners = false;
 detect-client-opacity = true;
 unredir-if-possible = false;
+window-shader-fg = "~/.config/picom/alias.glsl";
