--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -3,9 +3,9 @@
 #     Crisp Outline for i3       #
 ##################################
 
-backend = "xr_glx_hybrid";  # glx = better performance
+backend = "glx";  # glx = better performance
 use-experimental-backend = true;
-vsync = true;
+vsync = false;
 
 # Transparency
 inactive-opacity-override = true;
@@ -50,10 +50,10 @@ shadow-exclude = [
 # Animations
 animations = true;
 animation-clamping = true;
-animation-stiffness = 298;    
-animation-dampening = 88;     
-animation-window-mass = 0.6672;
-animation-stiffness-tag-change = 90.0;
+animation-stiffness = 3480;
+animation-dampening = 16;     
+animation-window-mass = 0.45;
+animation-stiffness-tag-change = 1610;
 animation-for-open-window = "slide-down";
 animation-for-transient-window = "none";
 animation-for-unmap-window = "squeeze-bottom";
@@ -104,4 +104,5 @@ detect-rounded-corners = false;
 detect-client-opacity = true;
 unredir-if-possible = false;
 glx-no-stencil = true;
+use-damage = false;
 window-shader-fg = "~/.config/picom/alias.glsl";
