picom.conf change

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -5,14 +5,17 @@
 
 backend = "glx";  # glx = better performance
 use-experimental-backend = true;
-vsync = false;
+vsync = true;
 
 # Transparency
-inactive-opacity-override = true;
-inactive-dim = 0.148;
-inactive-opacity = 0.8;
-active-opacity = 1.0;
+inactive-opacity = 0.92;
 frame-opacity = 1.0;
+inactive-opacity-override = false;
+detect-client-opacity = false;
+active-opacity = 1.0;
+inactive-dim = 0.2;
+
+inactive-dim-fixed = 1.0
 opacity-rule = [ 
   "100:window_type = 'utility'",
   "100:class_g = 'i3-frame'",       
@@ -31,7 +34,7 @@ shadow-opacity = 1.0;
 shadow-color = "#393D44"
 
 # Exclude fake borders on overlays
-shadow-exclude = [
+shadow-exclude = [	
   "class_g = 'Rofi'",
   "class_g = 'Polybar'",  
   "window_type = 'menu'",
@@ -48,12 +51,12 @@ shadow-exclude = [
 ];
 
 # Animations
-animations = true;
+animations = false;
 animation-clamping = true;
-animation-stiffness = 3480;
-animation-dampening = 16;     
-animation-window-mass = 0.45;
-animation-stiffness-tag-change = 1610;
+animation-stiffness = 392;
+animation-dampening = 40;     
+animation-window-mass = 0.46;
+animation-stiffness-tag-change = 138;
 animation-for-open-window = "slide-down";
 animation-for-transient-window = "none";
 animation-for-unmap-window = "squeeze-bottom";
@@ -62,14 +65,28 @@ enable-fading-prev-tag = true;
 #animation-for-close-window = "slide-up";
 #animation-for-workspace-switch-in = "slide-left";
 #animation-for-workspace-switch-out = "slide-right";
+animation-exclude = [
+	"class_g = 'Zen'",
+	"class_g = 'kitty'",
+	"class_g = 'Polybar'",
+	"window_type = 'tooltip'",
+	"window_type = 'popup_menu'"
+];
 
 # Fading
-fading = false;
-fade-in-step = 0.034;
-fade-out-step = 0.081;
-fade-duration = 300;
-fade-delta = 3;
-#no-fading-openclose=true
+fading = true;
+fade-in-step = 0.026;
+fade-out-step = 0.038;
+fade-duration = 10;
+fade-delta = 8;
+no-fading-openclose = false;
+no-fading-destroyed-argb = false;
+fade-exclude = [ 
+	"class_g = 'Rofi'",
+	"class_g = 'Polybar'",
+	"window_type = 'tooltip'",
+	"window_type = 'popup_menu'"
+];
 
 # Blur
 blur-method = "none";
@@ -79,6 +96,24 @@ blur-background-exclude = [
   "class_g = 'Rofi'",
   "window_type = 'menu'",
   "window_type = 'combo'",
+  "name = 'Notification'",
+  "window_type = 'dialog'",
+  "window_type = 'splash'",
+  "window_type = 'toolbar'",
+  "window_type = 'utility'",
+  "window_type = 'tooltip'",
+  "window_type = 'popup_menu'",
+  "window_type = 'notification'",
+  "window_type = 'dropdown_menu'",
+  "_GTK_FRAME_EXTENTS@:c"
+];
+
+# Corner Radius
+corner-radius = 0;
+rounded-corners-exclude = [
+  "window_type = 'menu'",
+  "window_type = 'combo'",
+  "name = 'Notification'",
   "window_type = 'dialog'",
   "window_type = 'splash'",
   "window_type = 'toolbar'",
@@ -89,20 +124,14 @@ blur-background-exclude = [
   "window_type = 'dropdown_menu'"
 ];
 
-# Corner Radius
-corner-radius = 0;
-rounded-corners-exclude = [
-  "window_type = 'menu'",
-  "window_type = 'popup_menu'",
-  "window_type = 'dropdown_menu'", 
-];
-
 # Misc
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 detect-rounded-corners = false;
-detect-client-opacity = true;
+detect-client-opacity = false;
 unredir-if-possible = false;
+use-ewmh-active-win = true;
+detect-transient = true;
 glx-no-stencil = true;
 use-damage = false;
-window-shader-fg = "~/.config/picom/alias.glsl";
+glx-fshader-win = "~/.config/picom/alias.glsl";
